# linkedin-card-generator

./: README.md  verification.html
liapi/: Cargo.toml
liapi/src/: main.rs  profilemodel.rs  profileservice.rs  profileview.rs  sessionmanager.rs
web-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
web-app/src/: App.jsx  profilestyle.css
