[package]
name = "liapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
reqwest = "0.11.24"
thirtyfour = "0.31.0"
url = "2.5.0"
tokio = "1.36.0"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
undetected-chromedriver = "0.1.2"
actix-web-httpauth = "0.8.1"
jsonwebtoken = "=7.2"
chrono = "0.4.34"